# templates

./: .gitignore  CONTRIBUTING.md  README.md  _README_TEMPLATE.md  appwrite.json  trunk
.github/workflows/: lint.yml  markdown-table-workflow.yml
.trunk/: trunk.yaml
analyze-with-perspectiveapi/: package.json
analyze-with-perspectiveapi/src/: main.js
analyze-with-perspectiveapi/static/: index.html
bun/starter/: .gitignore  README.md  env.d.ts  package.json
bun/sync-with-meilisearch/: README.md  bun.lockb  env.d.ts  package.json
bun/sync-with-qdrant/: README.md  bun.lockb  env.d.ts  package.json  tsconfig.json
bun/whatsapp-with-vonage/: .gitignore  README.md
censor-with-redact/: package-lock.json  package.json
cpp/: README.md
discord-command-bot/: package-lock.json  package.json
docs/: add-function-template.md
email-contact-form/: package.json
generate-pdf/: README.md  package.json
generate-qr-code/: README.md  package-lock.json
github-issue-bot/: package.json
hello-world/: README.md  package-lock.json  package.json
prompt-chatgpt/: README.md  package.json
push-notification-with-fcm/: README.md  package.json
python/: Readme.md
rust/starter/: .gitignore  Cargo.toml  README.md  main.rs
src/: main.js
starter-template/: README.md  package-lock.json  package.json
subscriptions-with-stripe/: README.md  env.d.ts  package-lock.json  package.json
sync-with-algolia/: package.json
sync-with-meilisearch/: README.md  env.d.ts  package.json
url-shortener/: env.d.ts  package-lock.json  package.json
whatsapp-with-vonage/: package.json
(+764 files in other folders)
