[package]
name = "handler"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[lib]
name = "handler"
path = "main.rs"

[dependencies]
appwrite = "0.4.0"
openruntimes = { version = "1.0.2", package = "openruntimes-types-for-rust" }
serde_json = "1.0"
tokio = { version = "1.48", features = ["rt"] }
